# kyuyo-system

./: .gitignore  CODE_REVIEW.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: accounting_mappings.py  allowance_types.py  attendance.py  auth.py  bonus.py  companies.py  employees.py  insurance_rates.py  payroll.py  payroll_periods.py  reports.py  system_settings.py  users.py  year_end.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  attendance.py  audit.py  base.py  bonus.py  company.py  employee.py  globals.py  insurance.py  notification.py  payroll.py  year_end.py
backend/app/schemas/: auth.py  common.py  company.py  employee.py
backend/app/services/: insurance_calculator.py  overtime_calculator.py  payroll_calculator.py  pdf_generator.py  tax_calculator.py
backend/sql/: 01_create_rls_functions.sql  02_create_rls_policies.sql  03_initial_data.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AttendancePage.tsx  CompaniesPage.tsx  DashboardPage.tsx  EmployeesPage.tsx  LoginPage.tsx  PayrollPage.tsx  PayrollRecordsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  YearEndAdjustmentPage.tsx
frontend/src/routes/: routes.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  common.ts
installer/: install.sh
installer/config/: env.template  nginx.conf.template  systemd.service
(+4 files in other folders)
